# resource-anomaly-detection

./: README.md  docker-compose.yml  init.sql  pyproject.toml
src/dynamic_auto_scaling/: adtk.ipynb  analyze.py  dashboard.py  main.py  populate_metrics.py
