[tool.poetry]
name = "dynamic-auto-scaling"
version = "0.1.0"
description = ""
authors = ["fruit-bird <github.ru3w9@slmail.me>"]
readme = "README.md"
packages = [{ include = "dynamic_auto_scaling", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
aiohttp = "^3.9.4"
pydantic = "^2.7.0"
psutil = "^5.9.8"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
